Main layout done

--- a/index.html
+++ b/index.html
@@ -6,24 +6,386 @@
     <link rel="stylesheet" type="text/css" href="./dist/style.css">
 </head>
 <body>
-<header></header>
-<section class="header-panel">
-    <div class="main-logo">
+<header class="main-header">
+    <div class="container overflow-h">
+        <div class="main-logo float-l">
+            <img src="./dist/assets/logo.svg" about="pithcbook-logo">
+        </div>
+        <nav class="main-nav float-r">
+            <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Reviews</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </div>
-    <nav class="main-nav">
-
-    </nav>
+</header>
+<section class="header-panel">
+    <div class="container overflow-h">
+        <div class="text-block float-l width-1-2">
+            <h2 class="title-decor decor-white">MODERN AXURE TEMPLATE<br/>FOR BEAUTIFUL PROTOTYPES</h2>
+            <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                accumsan et viverra justo commodo.
+            </p>
+            <a href="#" class="transparent-btn">Download</a>
+        </div>
+        <div class="form-block float-r width-1-2">
+            <form action="#" class="float-r">
+                <div class="form-header">
+                    <h3>Try Your <span class="accent-text">FREE</span> Trial Today</h3>
+                </div>
+                <div class="fields-wrap">
+                    <input type="text" placeholder="Name" class="form-input">
+                    <input type="email" placeholder="Email" class="form-input">
+                    <input type="password" placeholder="Password" class="form-input">
+                </div>
+                <button type="submit" class="primary-btn">Get Started</button>
+            </form>
+        </div>
+    </div>
 </section>
-<section class="social-media"></section>
-<section class="tabs"></section>
-<section class="sublist"></section>
-<section class="futures"></section>
-<section class="process"></section>
-<section class="pricing"></section>
-<section class="testimonials"></section>
-<section class=""></section>
-<section class="contact-us"></section>
-<footer></footer>
+<section class="social-media">
+    <div class="container overflow-h">
+        <div class="float-l">
+            <h2>Social Media</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
+                Aenean euismod bibendum laoreet.
+            </p>
+        </div>
+        <ul class="social-icons float-r">
+            <li><a href="#" target="_blank" class="fb"></a></li>
+            <li><a href="#" target="_blank" class="twitter"></a></li>
+            <li><a href="#" target="_blank" class="g-plus"></a></li>
+            <li><a href="#" target="_blank" class="pinterest"></a></li>
+            <li><a href="#" target="_blank" class="instagram"></a></li>
+            <li><a href="#" target="_blank" class="stumbleupon"></a></li>
+            <li><a href="#" target="_blank" class="rss"></a></li>
+        </ul>
+    </div>
+</section>
+<section class="tabs">
+    <div class="container overflow-h">
+        <div class="tabs-wrap float-l width-2-3 overflow-h">
+            <ul class="tabs-nav float-l">
+                <li class="active">Tab1</li>
+                <li>Tab2</li>
+                <li>Tab3</li>
+            </ul>
+            <div class="tabs-content float-l">
+                <div class="item display">
+                    <h2>Tabs with soft transitioning effect.</h2>
+                    <p class="paragraph-style ">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    </p>
+                    <p class="paragraph-style">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.
+                    </p>
+                    <a href="#" class="primary-btn btn-simple">Download</a>
+                </div>
+                <div class="item">
+                    <h2>Tabs with soft transitioning effect.</h2>
+                    <p class="paragraph-style ">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    </p>
+                    <a href="#" class="primary-btn btn-simple">Download</a>
+                </div>
+                <div class="item">
+                    <h2>Tabs with soft transitioning effect.</h2>
+                    <p class="paragraph-style">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.
+                    </p>
+                    <a href="#" class="primary-btn btn-simple">Download</a>
+                </div>
+            </div>
+        </div>
+        <div class="img-wrap float-l width-1-3">
+            <img src="./dist/assets/image_right_u255.svg" alt="tabs-img">
+        </div>
+    </div>
+</section>
+<section class="sublist">
+    <div class="container overflow-h">
+        <div class="width-1-2 float-l">
+            <img class="shadow-img" src="./dist/assets/image_left_sub_list_u260_copy.svg" alt="sublist-img">
+        </div>
+        <div class="list-wrap width-1-2 float-r">
+            <h2 class="title-decor title-small">Sub list section</h2>
+            <p class="paragraph-style margin-b-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                accumsan et viverra justo commodo.</p>
+            <ul class="list">
+                <li>
+                    <h3>Title</h3>
+                    <p class="paragraph-style">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean euismod bibendum laoreet.
+                    </p>
+                </li>
+                <li>
+                    <h3>Title</h3>
+                    <p class="paragraph-style">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean euismod bibendum laoreet. Proin gravida dolor
+                        sit amet lacus accumsan et viverra justo commodo.
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<section class="futures">
+    <div class="container overflow-h">
+        <div class="text-wrap width-1-2 float-l">
+            <h2 class="title-small title-decor">Standard Picture Section</h2>
+            <p class="paragraph-style">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+                et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
+                natoque penatibus et magnis dis parturient montes.
+            </p>
+            <p class="paragraph-style">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                bibendum laoreet.
+            </p>
+        </div>
+        <div class="width-1-2 float-r text-align-r padding-b-40">
+            <img class="shadow-img " src="./dist/assets/404-image.svg">
+        </div>
+    </div>
+</section>
+<section class="process">
+    <div class="container overflow-h text-align-c">
+        <h2 class="title-large title-decor decor-center">WHY THIS IS AWESOME</h2>
+        <p class="paragraph-style margin-b-80">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <ul class="futures-wrap overflow-h">
+            <li class="width-1-3 float-l">
+                <h3 class="title-small margin-b-30">Thoughtful Design</h3>
+                <p class="paragraph-style">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.</p>
+            </li>
+            <li class="width-1-3 float-l">
+                <h3 class="title-small margin-b-30">Well Crafted</h3>
+                <p class="paragraph-style">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.</p>
+            </li>
+            <li class="width-1-3 float-l">
+                <h3 class="title-small margin-b-30">Easy to Customize</h3>
+                <p class="paragraph-style">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.</p>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="pricing">
+    <div class="container overflow-h text-align-c">
+        <h2 class="title-large title-decor decor-center">PRICING OPTIONS</h2>
+        <p class="paragraph-style margin-b-80">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <ul class="pricing-wrap overflow-h">
+            <li class="width-1-3 float-l">
+                <div class="price-card">
+                    <div class="main">
+                        <div class="package">Basic</div>
+                        <div class="price">
+                            <span class="small-font">$</span><span class="large-font">0</span>
+                        </div>
+                        <div class="add-info">Free for Life</div>
+                        <div class="orange-line"></div>
+                    </div>
+                    <ul class="list">
+                        <li>1 gb of space</li>
+                        <li>10 gb of bandwidth</li>
+                        <li>3 websites</li>
+                        <li>Basic Customization</li>
+                        <li>wordpress integration</li>
+                        <li>email support</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="width-1-3 float-l profi-wrap">
+                <div class="price-card profi">
+                    <div class="main">
+                        <div class="package">Professional</div>
+                        <div class="price">
+                            <span class="small-font">$</span><span class="large-font">19</span>
+                        </div>
+                        <div class="add-info">Monthly Payment</div>
+                        <div class="primary-btn text-orange">
+                            OUR MOST POPULAR
+                        </div>
+                    </div>
+                    <ul class="list">
+                        <li>5 gb of space</li>
+                        <li>50 gb of bandwidth</li>
+                        <li>12 websites</li>
+                        <li>Advanced Customization</li>
+                        <li>wordpress integration</li>
+                        <li>email support</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="width-1-3 float-l">
+                <div class="price-card">
+                    <div class="main">
+                        <div class="package">Enterprise</div>
+                        <div class="price">
+                            <span class="small-font">$</span><span class="large-font">70</span>
+                        </div>
+                        <div class="add-info">Monthly Payment</div>
+                        <div class="orange-line"></div>
+                    </div>
+                    <ul class="list">
+                        <li>Unlimited space</li>
+                        <li>Unlimited bandwidth</li>
+                        <li>100 websites</li>
+                        <li>Advanced Customization</li>
+                        <li>Wordpress integration</li>
+                        <li>24/7 customer support</li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="testimonials">
+    <div class="container">
+        <h2 class="title-large title-decor decor-center text-align-c">WHAT OUR CUSTOMERS ARE SAYING</h2>
+        <p class="paragraph-style margin-b-80 text-align-c">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+        <ul class="testimonial-slider overflow-h">
+            <li class="width-1-3 float-l">
+                <div class="card">
+                    <div class="text">
+                        <p class="paragraph-style">
+                            Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.
+                        </p>
+                    </div>
+                    <div class="client overflow-h">
+                        <div class="width-1-3 float-l">
+                            <div class="circle-photo overflow-h">
+                                <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                            </div>
+                        </div>
+                        <div class="width-2-3 float-l margin-t-15">
+                            <p class="title-small name">Jeremy H.</p>
+                            <p class="paragraph-style">Manage</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="width-1-3 float-l">
+                <div class="card">
+                    <div class="text">
+                        <p class="paragraph-style">
+                            Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.
+                        </p>
+                    </div>
+                    <div class="client overflow-h">
+                        <div class="width-1-3 float-l">
+                            <div class="circle-photo overflow-h">
+                                <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                            </div>
+                        </div>
+                        <div class="width-2-3 float-l margin-t-15">
+                            <p class="title-small name">Jeremy H.</p>
+                            <p class="paragraph-style">Manage</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="width-1-3 float-l">
+                <div class="card">
+                    <div class="text">
+                        <p class="paragraph-style">
+                            Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.
+                        </p>
+                    </div>
+                    <div class="client overflow-h">
+                        <div class="width-1-3 float-l">
+                            <div class="circle-photo overflow-h">
+                                <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                            </div>
+                        </div>
+                        <div class="width-2-3 float-l margin-t-15">
+                            <p class="title-small name">Jeremy H.</p>
+                            <p class="paragraph-style">Manage</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="pralax">
+    <div class="container overflow-h text-align-c">
+        <h2 class="title-large title-decor decor-center decor-white white-text">STYLISH AXURE DESIGN</h2>
+        <p class="paragraph-style margin-b-30 white-text">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+        <a class="transparent-btn" href="#">Download</a>
+    </div>
+</section>
+<section class="contact-us">
+    <div class="container overflow-h">
+        <h2 class="title-large title-decor decor-center text-align-c">CONTACT US</h2>
+        <p class="paragraph-style margin-b-80 text-align-c">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <form action="#">
+            <div class="overflow-h">
+                <div class="width-1-2 float-l overflow-h">
+                    <input type="text" name="name" size="500" placeholder="Name" class="form-input">
+                    <input type="email" name="email" size="500" placeholder="Email" class="form-input">
+                    <input type="password" name="subject" size="500" placeholder="Subject" class="form-input">
+                </div>
+                <div class="width-1-2 float-l">
+                    <textarea name="message" class="form-input overflow-h" rows="9" placeholder="Message"></textarea>
+                </div>
+            </div>
+            <div class="text-align-c">
+                <button type="submit" class="primary-btn btn-simple">Send Message</button>
+            </div>
+        </form>
+    </div>
+</section>
+<footer class="footer-main">
+    <div class="container text-align-c">
+        <ul class="social-icons">
+            <li><a href="#" target="_blank" class="fb"></a></li>
+            <li><a href="#" target="_blank" class="twitter"></a></li>
+            <li><a href="#" target="_blank" class="g-plus"></a></li>
+            <li><a href="#" target="_blank" class="pinterest"></a></li>
+            <li><a href="#" target="_blank" class="instagram"></a></li>
+            <li><a href="#" target="_blank" class="stumbleupon"></a></li>
+            <li><a href="#" target="_blank" class="rss"></a></li>
+        </ul>
+        <p class="paragraph-style">© 2016 PitchBook</p>
+    </div>
+</footer>
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./dist/index.js"></script>
 </body>
 </html>
