--- a/index.html
+++ b/index.html
@@ -266,84 +266,167 @@
     <div class="container">
         <h2 class="title-large title-decor decor-center text-align-c">WHAT OUR CUSTOMERS ARE SAYING</h2>
         <p class="paragraph-style margin-b-80 text-align-c">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-        <ul class="testimonial-slider overflow-h">
-            <li class="width-1-3 float-l">
-                <div class="card">
-                    <div class="text">
-                        <p class="paragraph-style">
-                            Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.
-                        </p>
-                    </div>
-                    <div class="client overflow-h">
-                        <div class="width-1-3 float-l">
-                            <div class="circle-photo overflow-h">
-                                <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+        <div class="slider">
+            <ul class="testimonial-slider overflow-h">
+                <li class="width-1-3 float-l">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                        </div>
+                        <div class="client overflow-h">
+                            <div class="width-1-3 float-l">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 float-l margin-t-15">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
                             </div>
                         </div>
-                        <div class="width-2-3 float-l margin-t-15">
-                            <p class="title-small name">Jeremy H.</p>
-                            <p class="paragraph-style">Manage</p>
+                    </div>
+                </li>
+                <li class="width-1-3 float-l">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.
+                            </p>
                         </div>
-                    </div>
-                </div>
-            </li>
-            <li class="width-1-3 float-l">
-                <div class="card">
-                    <div class="text">
-                        <p class="paragraph-style">
-                            Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.
-                        </p>
-                    </div>
-                    <div class="client overflow-h">
-                        <div class="width-1-3 float-l">
-                            <div class="circle-photo overflow-h">
-                                <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                        <div class="client overflow-h">
+                            <div class="width-1-3 float-l">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 float-l margin-t-15">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
                             </div>
                         </div>
-                        <div class="width-2-3 float-l margin-t-15">
-                            <p class="title-small name">Jeremy H.</p>
-                            <p class="paragraph-style">Manage</p>
+                    </div>
+                </li>
+                <li class="width-1-3 float-l">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style"> elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.
+                            </p>
                         </div>
-                    </div>
-                </div>
-            </li>
-            <li class="width-1-3 float-l">
-                <div class="card">
-                    <div class="text">
-                        <p class="paragraph-style">
-                            Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.
-                        </p>
-                    </div>
-                    <div class="client overflow-h">
-                        <div class="width-1-3 float-l">
-                            <div class="circle-photo overflow-h">
-                                <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                        <div class="client overflow-h">
+                            <div class="width-1-3 float-l">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 float-l margin-t-15">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
                             </div>
                         </div>
-                        <div class="width-2-3 float-l margin-t-15">
-                            <p class="title-small name">Jeremy H.</p>
-                            <p class="paragraph-style">Manage</p>
+                    </div>
+                </li>
+                <li class="width-1-3 float-l">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                DDDD
+                            </p>
+                        </div>
+                        <div class="client overflow-h">
+                            <div class="width-1-3 float-l">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 float-l margin-t-15">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+                <li class="width-1-3 float-l">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                        </div>
+                        <div class="client overflow-h">
+                            <div class="width-1-3 float-l">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 float-l margin-t-15">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="width-1-3 float-l">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedi
+                            </p>
+                        </div>
+                        <div class="client overflow-h">
+                            <div class="width-1-3 float-l">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 float-l margin-t-15">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="width-1-3 float-l">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.
+                            </p>
+                        </div>
+                        <div class="client overflow-h">
+                            <div class="width-1-3 float-l">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 float-l margin-t-15">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <button id="prev" class="arrow-slider prev"><img src="./dist/assets/left_arrow.png" alt="prev"></button>
+            <button id="next" class="arrow-slider next"><img src="./dist/assets/right_arrow.png" alt="next"></button>
+        </div>
     </div>
 </section>
-<section class="pralax">
+<section class="prallax">
     <div class="container overflow-h text-align-c">
         <h2 class="title-large title-decor decor-center decor-white white-text">STYLISH AXURE DESIGN</h2>
         <p class="paragraph-style margin-b-30 white-text">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
