--- a/index.html
+++ b/index.html
@@ -13,7 +13,50 @@
         </div>
         <nav class="main-nav float-r">
             <ul>
-                <li><a href="#">Features</a></li>
+                <li class="submenu-isset"><a href="#">Features</a>
+                    <div class="sub-menu-hidden">
+                        <div class="container-menu overflow-h">
+                            <ul class="width-1-2 float-l overflow-h">
+                                <li class="width-1-4 float-l">
+                                    <a href="#">About us</a>
+                                    <img src="./dist/assets/menu_image.png">
+                                </li>
+                                <li class="width-1-4 float-l">
+                                    <a href="#">Our partners</a>
+                                    <img src="./dist/assets/menu_image.png">
+                                </li>
+                                <li class="width-1-4 float-l">
+                                    <a href="#">Careers</a>
+                                    <img src="./dist/assets/menu_image.png">
+                                </li>
+                                <li class="width-1-4 float-l">
+                                    <a href="#">Coutact us</a>
+                                    <img src="./dist/assets/menu_image.png">
+                                </li>
+                            </ul>
+                            <div class="width-1-2 float-l">
+                                <ul class="sub-menu">
+                                    <li><a href="#">Product</a></li>
+                                    <li><a href="#">API and Datafeed</a></li>
+                                    <li><a href="#">Platform</a></li>
+                                    <li><a href="#">Mobile</a></li>
+                                    <li><a href="#">News & Analysis</a></li>
+                                    <li><a href="#">Reports</a></li>
+                                    <li><a href="#">Videos</a></li>
+                                    <li><a href="#">Subscribe to N&A</a></li>
+                                    <li><a href="#">News & Analysis</a></li>
+                                    <li><a href="#">Reports</a></li>
+                                    <li><a href="#">Videos</a></li>
+                                    <li><a href="#">Subscribe to N&A</a></li>
+                                    <li><a href="#">News & Analysis</a></li>
+                                    <li><a href="#">Reports</a></li>
+                                    <li><a href="#">Videos</a></li>
+                                    <li><a href="#">Subscribe to N&A</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Reviews</a></li>
